--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-    <p class="post-meta">{{ page.tags }}</p>
+    <p class="post-meta">{% for tag in page.tags %} {{ page.tags }}, {% endfor %}</p>
   </header>
 
   <article class="post-content">
